alignment issue

--- a/style.css
+++ b/style.css
@@ -173,9 +173,27 @@ audio {
   }
 }
 
-@media (min-width: 700px) {
+@media (max-width: 700px) {
   #shadow {
     max-height: 100vh;
     max-width: 100vw;
   }
+  #name {
+    bottom: 60px;
+  }
 }
+
+@media (max-height: 374px) {
+  #name {
+    bottom: 40px;
+  }
+}
+
+/* @media (max-width: 900px) {
+  #fullScreen {
+    display: none;
+  }
+  #exitFullSreen {
+    display: none;
+  }
+} */
